--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
     "auto-changelog": "~2.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
   },
