--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
     "core-js": "^3.22.6",
+    "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-app-polyfill": "^3.0.0",
@@ -49,7 +50,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.2.0",
     "auto-changelog": "~2.4.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "sass": "^1.52.1",
     "web-vitals": "^2.1.4"
   },
