--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.1.0",
+    "react-rating": "^2.0.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "4.2.0",
