--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-router-dom": "^6.3.0",
     "redux": "4.2.0",
     "simplebar-react": "^2.3.7",
+    "star-rating": "^0.0.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
