--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@mui/lab": "^5.0.0-alpha.88",
     "@mui/material": "^5.8.6",
     "@mui/styles": "^5.8.6",
+    "axios": "^0.27.2",
     "chart.js": "^3.7.1",
     "classnames": "^2.3.1",
     "core-js": "^3.22.6",
