--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
     "core-js": "^3.22.6",
     "node-sass": "^7.0.1",
     "prop-types": "^15.8.1",
-    "react": "^17",
+    "react": "17.0.2",
     "react-app-polyfill": "^3.0.0",
     "react-data-table-component": "^7.5.2",
-    "react-dom": "^17",
+    "react-dom": "17.0.2",
     "react-rating": "^2.0.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
