--- a/.env_example
+++ b/.env_example
@@ -2,8 +2,7 @@ PORT=3000
 CHOKIDAR_USEPOLLING=true
 
 NODE_ENV="development"
-PUBLIC_URL=""
-APP_VERSION=
+PUBLIC_URL="https://tadreebi.vercel.app/"
 BACKEND_URL=""
 
 HTTPS=true
