--- a/package.json
+++ b/package.json
@@ -52,9 +52,13 @@
     "react-app-polyfill": "^3.0.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.1.0",
+    "react-loader-spinner": "^5.1.5",
     "react-rating": "^2.0.5",
     "react-redux": "^8.0.2",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
+    "react-slick": "^0.29.0",
+    "react-typed": "^1.2.0",
     "redux": "4.2.0",
     "simplebar-react": "^2.3.7",
     "star-rating": "^0.0.1",
